# nlp

./: README.md  lab2.ipynb  lab3.ipynb  lab4.ipynb  nlp_task_2.ipynb  nlp_task_3.ipynb  nlp_task_4.ipynb  nlp_task_6.ipynb  pyproject.toml
