[tool.poetry]
name = "dsp"
version = "0.1.0"
description = ""
authors = ["Ramil <ramil@localhost>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.26.2"
SciPy = "^1.11.4"
matplotlib = "^3.8.2"
soundfile = "^0.12.1"
librosa = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
